--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,20 @@ body {
 	border-bottom: 0.5px dashed #999;
 	padding: 5px 0;
 }
+
+.doneBtn,
+.removeBtn {
+	padding: 1px;
+	width: 25px;
+	height: 25px;
+	outline: none;
+}
+
+.doneBtn {
+	margin-right: 10px;
+}
+
+.removeBtn {
+	float: right;
+	font-size: medium;
+}
