update app with a functioning 'done' button and styling

--- a/src/index.css
+++ b/src/index.css
@@ -83,3 +83,10 @@ body {
 	float: right;
 	font-size: medium;
 }
+
+.completed {
+	text-decoration: line-through;
+	font-style: italic;
+	color: #999;
+	opacity: 0.5;
+}
